entity class added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=StudentClubManagementSystem
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/StudentClub
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=newpassword
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
